// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.render(thread, content) post a tweet 1`] = `
Array [
  Object {
    "body": Object {
      "data": Object {
        "id": "1234567890",
        "text": "Hello World",
      },
    },
    "code": 200,
    "uploadedMedia": null,
  },
  Object {
    "body": Object {
      "data": Object {
        "id": "1234567890",
        "text": "Hello World",
      },
    },
    "code": 200,
    "uploadedMedia": null,
  },
]
`;

exports[`.render(thread, content) post a tweet 2`] = `
Array [
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "---",
    "mediaSources": null,
    "refreshTarget": [Function],
    "request": Object {
      "href": "2/tweets",
      "method": "POST",
      "parameters": Object {
        "text": "Hello World",
      },
    },
    "target": TwitterTweetTarget {
      "agentId": "1234567890",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "---",
    "mediaSources": null,
    "refreshTarget": [Function],
    "request": Object {
      "href": "2/tweets",
      "method": "POST",
      "parameters": Object {
        "text": "Foo Bar Baz",
      },
    },
    "target": TwitterTweetTarget {
      "agentId": "1234567890",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
]
`;

exports[`.render(thread, content) reply to a tweet 1`] = `
Array [
  Object {
    "body": Object {
      "data": Object {
        "id": "2222222222222",
        "text": "Hello World",
      },
    },
    "code": 200,
    "uploadedMedia": null,
  },
  Object {
    "body": Object {
      "data": Object {
        "id": "2222222222222",
        "text": "Hello World",
      },
    },
    "code": 200,
    "uploadedMedia": null,
  },
]
`;

exports[`.render(thread, content) reply to a tweet 2`] = `
Array [
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "---",
    "mediaSources": null,
    "refreshTarget": [Function],
    "request": Object {
      "href": "2/tweets",
      "method": "POST",
      "parameters": Object {
        "text": "Hello World",
      },
    },
    "target": TwitterTweetTarget {
      "agentId": "1234567890",
      "platform": "twitter",
      "tweetId": "1111111111111",
    },
  },
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "---",
    "mediaSources": null,
    "refreshTarget": [Function],
    "request": Object {
      "href": "2/tweets",
      "method": "POST",
      "parameters": Object {
        "text": "Foo Bar Baz",
      },
    },
    "target": TwitterTweetTarget {
      "agentId": "1234567890",
      "platform": "twitter",
      "tweetId": "1111111111111",
    },
  },
]
`;

exports[`.render(thread, content) send direct message 1`] = `
Object {
  "jobs": Array [
    Object {
      "accomplishRequest": [Function],
      "asApplication": false,
      "key": "twtr.1234567890.9876543210",
      "mediaSources": null,
      "refreshTarget": null,
      "request": Object {
        "href": "1.1/direct_messages/events/new.json",
        "method": "POST",
        "parameters": Object {
          "event": Object {
            "message_create": Object {
              "message_data": Object {
                "attachment": undefined,
                "text": "Hello World",
              },
              "target": Object {
                "recipient_id": "9876543210",
              },
            },
            "type": "message_create",
          },
        },
      },
      "target": TwitterChat {
        "agentId": "1234567890",
        "id": "9876543210",
        "platform": "twitter",
      },
    },
    Object {
      "accomplishRequest": [Function],
      "asApplication": false,
      "key": "twtr.1234567890.9876543210",
      "mediaSources": null,
      "refreshTarget": null,
      "request": Object {
        "href": "1.1/direct_messages/events/new.json",
        "method": "POST",
        "parameters": Object {
          "event": Object {
            "message_create": Object {
              "message_data": Object {
                "attachment": undefined,
                "text": "Foo Bar Baz",
              },
              "target": Object {
                "recipient_id": "9876543210",
              },
            },
            "type": "message_create",
          },
        },
      },
      "target": TwitterChat {
        "agentId": "1234567890",
        "id": "9876543210",
        "platform": "twitter",
      },
    },
  ],
  "results": Array [
    Object {
      "body": Object {
        "event": Object {},
      },
      "code": 200,
      "uploadedMedia": null,
    },
    Object {
      "body": Object {
        "event": Object {},
      },
      "code": 200,
      "uploadedMedia": null,
    },
  ],
  "tasks": Array [
    Object {
      "payload": Array [
        Object {
          "accomplishRequest": [Function],
          "asApplication": false,
          "key": "twtr.1234567890.9876543210",
          "mediaSources": null,
          "refreshTarget": null,
          "request": Object {
            "href": "1.1/direct_messages/events/new.json",
            "method": "POST",
            "parameters": Object {
              "event": Object {
                "message_create": Object {
                  "message_data": Object {
                    "attachment": undefined,
                    "text": "Hello World",
                  },
                  "target": Object {
                    "recipient_id": "9876543210",
                  },
                },
                "type": "message_create",
              },
            },
          },
          "target": TwitterChat {
            "agentId": "1234567890",
            "id": "9876543210",
            "platform": "twitter",
          },
        },
        Object {
          "accomplishRequest": [Function],
          "asApplication": false,
          "key": "twtr.1234567890.9876543210",
          "mediaSources": null,
          "refreshTarget": null,
          "request": Object {
            "href": "1.1/direct_messages/events/new.json",
            "method": "POST",
            "parameters": Object {
              "event": Object {
                "message_create": Object {
                  "message_data": Object {
                    "attachment": undefined,
                    "text": "Foo Bar Baz",
                  },
                  "target": Object {
                    "recipient_id": "9876543210",
                  },
                },
                "type": "message_create",
              },
            },
          },
          "target": TwitterChat {
            "agentId": "1234567890",
            "id": "9876543210",
            "platform": "twitter",
          },
        },
      ],
      "type": "dispatch",
    },
  ],
}
`;
